--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/assetic-bundle": "~2.1",
         "friendsofsymfony/rest-bundle": "~1.0",
         "jms/serializer-bundle": ">=0.12,<0.14",
-        "mrogelja/createphp": "0.9.*"
+        "midgard/createphp": "dev-propel-orm"
     },
     "require-dev": {
         "symfony-cmf/testing": "1.1.*"
